# CW4

./: pyproject.toml
database/: vacancies.json
src/: main.py  method.py  sorting.py  translation.py
